<resources>
    <string name="app_name">LocationTracker</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main32">Main32Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="todo">TODO</string>
    <string name="you_can_now_find_your_friends_and_family_through_our_app">You can now find your friends and family through our app!!!</string>
    <string name="get_started">GET STARTED</string>
    <string name="welcome">WELCOME!!!</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="todo1">TODO</string>
    <string name="enter_the_mobile_number">Enter the mobile number</string>
    <string name="search">Search</string>
</resources>
