<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8b767b"
    tools:context="com.example.admin.locationtracker.MainActivity">


    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:fontFamily="cursive"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btngetstarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtwelcome"
        android:layout_alignParentBottom="true"

        android:layout_alignStart="@+id/txtwelcome"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="57dp"
        android:layout_marginStart="57dp"
        android:background="#f50606"
        android:text="@string/get_started"
        android:textColor="#fcfafa"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtwelcome"
        android:layout_marginTop="11dp"
        android:text="@string/you_can_now_find_your_friends_and_family_through_our_app"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_above="@+id/btngetstarted"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/locate1" />


</RelativeLayout>
